@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.611 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.612 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -259,3 +259,7 @@ Changes from NetBSD 3.0 to NetBSD 4.0:
 		Allows / file system on e.g., cgd(4), vnd(4) or ccd(4)
 		volumes. [salo 20060418]
 	cobalt: Account interrupts by evcnt(9). [tsutsui 20060421]
+	cksum(1): Add a switch "-c file" to verify a list of checksums
+		generated by the cksum program (and its siblings) and stored
+		in file against files on disk, e.g. after "md5 *.tgz >MD5"
+		verify with "md5 -c MD5". [hubertf 20060423]
